--- a/Creative-Thinking/module3_toolkit1.html
+++ b/Creative-Thinking/module3_toolkit1.html
@@ -218,7 +218,7 @@
 </head>
 <body>
     <div class="container rounded-xl">
-        <a href="index.html" class="back-link-top rounded-lg">
+        <a href="creative-thinking-hub.html" class="back-link-top rounded-lg">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H16a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
             </svg>
