Add interactive report for Corporate Transactions with M&A, Divestitures, and Strategic Alliances sections
- Implemented a tab-based navigation system for easy access to different topics.
- Created detailed content for M&A, Divestitures, and Strategic Alliances, including motivations, challenges, and case studies.

--- a/Corporate-Strategy/corporate-strategy-hub.html
+++ b/Corporate-Strategy/corporate-strategy-hub.html
@@ -66,7 +66,7 @@
                 </div>
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">Corporate Scope</h2>
                 <p class="text-gray-600 mb-6">Define the boundaries and activities of the corporation.</p>
-                <a href="corporate-scope-and-diversification.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
+                <a href="corporate-scope.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
                     Explore
                 </a>
             </div>
@@ -85,7 +85,7 @@
                 </div>
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">Corporate Transactions</h2>
                 <p class="text-gray-600 mb-6">Understand mergers, acquisitions, and divestitures.</p>
-                <a href="#" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
+                <a href="corporate-transactions.html" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
                     Explore
                 </a>
             </div>
