Enhance Corporate Transactions Module and Add Idea Evaluation Page - Introduced a new page, idea-evaluation.html, for evaluating creative ideas with interactive elements and visualizations. - Enhanced navigation in creative-thinking-hub.html to include the new idea evaluation module.

--- a/Creative-Thinking/creative-thinking-hub.html
+++ b/Creative-Thinking/creative-thinking-hub.html
@@ -147,6 +147,11 @@
                 <a href="module1_toolkit2.html" class="module-link rounded-lg">Module 1: Creative Collaboration - Social Influence and Pitching Ideas</a>
             </li>
         </ul>
+        <ul>
+            <li>
+                <a href="idea-evaluation.html" class="module-link rounded-lg">Module 2: Evaluating Ideas</a>
+            </li>
+        </ul>
 
         <div class="ai-feature-box rounded-lg">
             <h2 class="text-xl font-bold mb-4">✨ Creative Spark Generator</h2>
