Add global strategy page and update link in corporate strategy hub

--- a/Corporate-Strategy/corporate-strategy-hub.html
+++ b/Corporate-Strategy/corporate-strategy-hub.html
@@ -101,7 +101,7 @@
                 </div>
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">Global Strategy</h2>
                 <p class="text-gray-600 mb-6">Develop strategies for international markets.</p>
-                <a href="#" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
+                <a href="global-strategy.html" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
                     Explore
                 </a>
             </div>
