Fix file paths and add new module for team dynamics in Creative Thinking Hub

--- a/Creative-Thinking/creative-thinking-hub.html
+++ b/Creative-Thinking/creative-thinking-hub.html
@@ -152,6 +152,11 @@
                 <a href="idea-evaluation.html" class="module-link rounded-lg">Module 2: Evaluating Ideas</a>
             </li>
         </ul>
+        <ul>
+            <li>
+                <a href="team-ideas.html" class="module-link rounded-lg">Module 3: The Case for Team</a>
+            </li>
+        </ul>
 
         <div class="ai-feature-box rounded-lg">
             <h2 class="text-xl font-bold mb-4">✨ Creative Spark Generator</h2>
